--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,5 +9,5 @@ spring:
 server:
   port: 8080
 
-#mybatis:
-#mapper-locations: classpath:Mapper/*Mapper.xml
+mybatis:
+  mapper-locations: classpath:Mapper/*Mapper.xml
